# kafka-spark-app

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGILE.md  Dockerfile.spark  ISSUES_UPLOAD_FILE.xlsx  LICENCE.txt  Makefile  README.md  coordinates.py  docker-compose.yml  live_endpoint_examples.ipynb  map 2.ipynb  map_.ipynb  package-lock.json  producer 1.ipynb  producer_.ipynb  pyproject.toml  requirements.txt  start-master.sh  start-worker.sh
backend/: Dockerfile  app.py  requirements.txt
backend/api/: __init__.py  get_historical_stats.py  get_live_stats.py  kafka_topics.py  register_device.py  send_stream.py
backend/config/: __init__.py  config.py  constants.py  environment.env  logging_config.py
backend/data/device_schemas/: gps_10.json  gps_11.json  gps_2.json  gps_3.json  gps_4.json  gps_5.json  gps_7.json  gps_8.json  player_heart_rate_1.json  player_heart_rate_11.json  player_heart_rate_3.json  player_heart_rate_5.json  player_heart_rate_8.json  player_heart_rate_9.json  player_temperature_11.json  player_temperature_3.json  player_temperature_4.json  player_temperature_5.json  player_temperature_6.json  player_temperature_7.json  player_temperature_8.json  sensor_001.json  test_device.json  test_gps_1.json
backend/models/: __init__.py  schemas.py
backend/simulator-data/: MockData-2.csv  wearables-mock-data.csv
backend/tests/streaming/: stream.py
data/device_schemas/: accel.json  accel_1.json  accel_2.json  gps.json  gps_1.json  player_heart_rate.json  player_heart_rate_10.json  player_heart_rate_2.json  player_heart_rate_7.json  player_temperature.json  player_temperature_1.json  player_temperature_10.json  player_temperature_2.json  sensor_001.json  wind.json  wind_1.json  wind_2.json
data/historical/devices/: injuries_summary.json  sensor_001.json
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  requirements.txt
frontend/public/: index.html
frontend/src/: App.js  Dashboard.js  PlayerPage.js  TeamPage.js
frontend/src/components/: Dashboard.js  FatigueLevelDistribution.js  FatigueLevelDistributionWithBackend.js  MetricsCards.js  MetricsCardsWithBackend.js  PlayerOverview.js  PlayerOverviewWithBackend.js  PlayersDropdownWithCheckboxes.js  Sidebar.js  TeamStatistics.js  TeamStatisticsWithBackend.js
frontend/src/config/: api.js
frontend/src/context/: ExportExcel.js  NotificationContext.js  TeamContext.js
frontend/src/pages/: DevicesPage.js  (+10 more)
scripts/: api_examples.py  produce_data.py  register_devices.py  visualize_gps.py
simulator-data/: wearables-mock-data.csv
test/: stream.py
test/streaming/: stream.py
tests/: __init__.py  conftest.py  test_api.py  test_file_management.py  test_maths_functions.py
utils/: __init__.py  file_management.py  kafka_producer.py  maths_functions.py  spark_processor.py
(+1109 files in other folders)
